--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,75 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".RegistroActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:padding="30dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:textSize="32dp"
             android:gravity="center"
             android:layout_marginBottom="20dp"
-            android:textSize="30dp"
             android:text="Autenticacion" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textSize="18dp"
-            android:layout_marginBottom="30dp"
             android:layout_height="wrap_content"
-            android:text="Inicio de sesion" />
+            android:layout_gravity="center"
+            android:layout_marginBottom="40dp"
+            android:textSize="18dp"
+            android:gravity="center"
+            android:text="Crear cuanta nueva" />
+
+        <EditText
+            android:id="@+id/etNombre"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:ems="10"
+            android:hint="Nombre de Usuario"
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:layout_marginBottom="10dp"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             android:hint="Email" />
 
         <EditText
             android:id="@+id/etContraseña"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:layout_marginBottom="20dp"
             android:inputType="textPassword"
+            android:layout_marginBottom="10dp"
             android:hint="Contraseña" />
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnRegistro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/boton"
             android:layout_marginBottom="10dp"
-            android:text="Iniciar sesion" />
+            android:background="@drawable/boton"
+            android:textColor="@color/black"
+            android:text="Registro"
+            app:backgroundTint="?android:attr/textColorHighlightInverse" />
 
         <TextView
-            android:id="@+id/tvRegistro"
+            android:id="@+id/tvLogin"
             android:layout_width="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginBottom="30dp"
+            android:textSize="15dp"
             android:layout_height="wrap_content"
-            android:text="¿Nuevo aqui? Crear cuenta" />
+            android:layout_marginBottom="30dp"
+            android:text="¿Ya tiene cuenta? Ingrese aqui" />
 
         <ProgressBar
-            android:id="@+id/pbLogin"
+            android:id="@+id/pbRegistro"
             style="?android:attr/progressBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
 
+
+</androidx.constraintlayout.widget.ConstraintLayout>
